--- a/css/mobile.css
+++ b/css/mobile.css
@@ -590,7 +590,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    font-size: 12px;
+    font-size: 12px !important;
   }
 
   .section {
