--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,15 @@ body {
   margin: 0 auto;
   z-index: 10;
 }
+.container-menu {
+  position: relative;
+  width: 100%;
+  max-width: 1430px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  z-index: 1000;
+}
 
 .overflow {
   overflow: hidden;
@@ -285,9 +294,17 @@ body {
   align-items: center;
   padding: 8px 20px;
   border-radius: 8px;
-  color: var(--color-background);
-  background-color: var(--color-primary);
 }
+
+.nav-bottom__link {
+  background-color: var(--color-secondary);
+  color: var(--color-background);
+}
+.nav-bottom__link_catalog {
+  background-color: var(--color-primary);
+  color: var(--color-background);
+}
+
 
 .nav-bottom__link:hover, .nav-bottom__link_catalog:hover {
   opacity: 0.8;
@@ -371,12 +388,10 @@ body {
 .banner-slider-button-next{
 	background-image: url('../img/a-r.svg');
 	background-repeat: no-repeat;
-  right: -5px !important;
 }
 .banner-slider-button-prev{
 	background-image: url('../img/a-l.svg');
 	background-repeat: no-repeat;
-  left: -5px !important;
 }
 .default-pagination {
 	display: flex;
@@ -390,9 +405,7 @@ body {
 	background-color: #B7E1FF;
 	opacity: 1;
 }
-.banner__img_red {
-  background-color: blue;
-}
+
 
 .default-pagination .swiper-pagination-bullet-active {
 	display: inline-flex;
@@ -421,6 +434,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
+  background-color: var(--color-secondary);
 }
 .banner__content {
   display: flex;
@@ -444,13 +458,6 @@ body {
 .banner__btn:hover {
   background-color: var(--color-primary);
   color: var(--color-background);
-}
-
-.banner__img_white {
-  background-color: green;
-}
-.banner__img_red {
-  background-color: red;
 }
 
 .default-pagination .swiper-pagination-bullet-active::after {
@@ -723,6 +730,7 @@ body {
   overflow-x: hidden;
   opacity: 0;
   transition: 0.3s;
+  min-height: 600px;
 }
 
 .catalog_active {
@@ -734,8 +742,8 @@ body {
 .catalog__list {
 	position: relative;
   display: flex;
-	min-height: 630px;
-  background: linear-gradient(to right, var(--color-primary) 24%, #ffffff 24%, #ffffff 100%);
+  background-color: #fff;
+  height: 100%;
 }
 
 .catalog__item {
@@ -744,18 +752,22 @@ body {
 }
 
 .catalog__list-wrapper{
+  width: 20%;
 	padding-top: 12px;
+  min-height: 600px;
 	padding-bottom: 12px;
   border-radius: 8px;
+  background-color: var(--color-primary);
  }
 
 .catalog__item-title {
+  position: relative;
+  z-index: 800;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 24%;
+	width: 100%;
 	padding-left: 20px;
-	padding-right: 25px;
 	color: var(--color-background);
 	height: 40px;
 }
@@ -764,6 +776,8 @@ body {
 	display: none;
 	width: 24px;
 	height: 24px;
+  transform: translateX(10px);
+  
 }
 
 .catalog__item:hover .catalog__item-title,
@@ -805,11 +819,13 @@ body {
 	display: none;
   position: absolute;
 	top: 3.5%;
-  left: 26%;
-  width: 75%;
+  left: 20%;
+  right: 0;
+  width: 100%;
   background-color: var(--color-background);
 	z-index: 10;
   overflow-x: hidden;
+  padding-left: 50px !important;
 }
 
 .subcatalog .catalog__item {
