--- a/css/style.css
+++ b/css/style.css
@@ -640,7 +640,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url('../img/benefits/BG.jpg');
+  background-image: url('../img/benefits/BG.webp');
   height: 445px;
 }
 
